--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "@tailwindcss/forms": "^0.5.4",
     "cra-template-redux": "2.0.0",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
